tests/negative/comptime_div_exact_non_exact.ora
contract ComptimeDivExactNonExact {
    pub fn run() -> u256 {
        return comptime {
            @divExact(5, 2);
        };
    }
}
